2004-06-14  Philip Lafleur  <plafleur@cvs.gnome.org>
	* app/tools/gimptransformtool.c: Preview is now only used for
	layer transformations.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13615 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-14  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* app/tools/gimptransformtool.c: Preview is now only used for
+	layer transformations.
+
 2004-06-14  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimpperspectivetool.c
