--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-14  Sven Neumann  <sven@gimp.org>
+
+	* app/paint-funcs/paint-funcs-generic.h (color_pixels): some code
+	cleanup I did while attempting to optimize this code further.
+
 2004-06-14  Henrik Brix Andersen  <brix@gimp.org>
 
 	* app/plug-in/plug-in-run.c: let extensions run synchronously when
