2004-06-14  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpactiongroup.c (gimp_action_group_add_*_actions):
	do the workaround for "" accelerators only if the GTK+ version
	is smaller than 2.4.3. Fixes bug #144342 for GTK+ >= 2.4.3.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13622 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-14  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpactiongroup.c (gimp_action_group_add_*_actions):
+	do the workaround for "" accelerators only if the GTK+ version
+	is smaller than 2.4.3. Fixes bug #144342 for GTK+ >= 2.4.3.
+
 2004-06-14  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimpdrawable-transform.c: declared
