--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-14  Michael Natterer  <mitch@gimp.org>
 
+	* app/tools/gimptransformtool.c: use gimp_draw_tool_is_active()
+	instead of GIMP_IS_DISPLAY(draw_tool->gdisp).
+
+2004-06-14  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpactiongroup.c (gimp_action_group_add_*_actions):
 	do the workaround for "" accelerators only if the GTK+ version
 	is smaller than 2.4.3. Fixes bug #144342 for GTK+ >= 2.4.3.
