2004-06-14  Sven Neumann  <sven@gimp.org>
	* app/paint/gimpinkoptions.c: replaced some arbitrary values with
	larger but still arbitrary values (default and limit for ink size).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13626 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-14  Sven Neumann  <sven@gimp.org>
+
+	* app/paint/gimpinkoptions.c: replaced some arbitrary values with
+	larger but still arbitrary values (default and limit for ink size).
+
 2004-06-14  Michael Natterer  <mitch@gimp.org>
 
 	* app/paint/gimppaintcore.[ch]: removed PRETRACE_PAINT and
