--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-15  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* app/core/gimpdrawable-transform.c (gimp_drawable_transform_tiles_affine):
+	Don't round texture coordinates when not using interpolation. Fixes
+	bug #144352 for the nearest neighbor case only.
+
 2004-06-14  Sven Neumann  <sven@gimp.org>
 
 	* app/paint/gimpinkoptions.c: replaced some arbitrary values with
