2004-06-15  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/mng.c (respin_cmap): applied the fix for empty
	colormaps (bug #143009) here as well.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13630 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,14 @@
+2004-06-15  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/mng.c (respin_cmap): applied the fix for empty
+	colormaps (bug #143009) here as well.
+
 2004-06-15  Philip Lafleur  <plafleur@cvs.gnome.org>
 
-	* app/core/gimpdrawable-transform.c (gimp_drawable_transform_tiles_affine):
-	Don't round texture coordinates when not using interpolation. Fixes
-	bug #144352 for the nearest neighbor case only.
+	* app/core/gimpdrawable-transform.c
+	(gimp_drawable_transform_tiles_affine): Don't round texture
+	coordinates when not using interpolation. Fixes bug #144352 for
+	the nearest neighbor case only.
 
 2004-06-14  Sven Neumann  <sven@gimp.org>
 
