--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-15  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* app/tools/gimpcroptool.c (crop_selection_callback): Force
+	aspect ratio to match selection when 'From Selection' is clicked.
+	Fixes bug #144361. Also converted tabs to spaces.
+
 2004-06-15  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/mng.c (respin_cmap): applied the fix for empty
