2004-06-15  Manish Singh  <yosh@gimp.org>
        * tools/pdbgen/pdbgen.pl
        * tools/pdbgen/lib.pl: some simplistic code to add a $deprecated
        flag to pdb definitions, which translates into GIMP_DISABLE_DEPRECATED
        guards in lib headers.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13637 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-15  Manish Singh  <yosh@gimp.org>
+
+	* tools/pdbgen/pdbgen.pl
+	* tools/pdbgen/lib.pl: some simplistic code to add a $deprecated
+	flag to pdb definitions, which translates into GIMP_DISABLE_DEPRECATED
+	guards in lib headers.
+
 2004-06-15  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/Makefile.am
