2004-06-15  Sven Neumann  <sven@gimp.org>
	* tools/pdbgen/pdb/text_tool.pdb: deprecate the XLFD-based API
	gimp_text() and gimp_text_get_extents().

	* app/pdb/text_tool_cmds.c
	* libgimp/gimptexttool_pdb.[ch]: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13638 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-15  Sven Neumann  <sven@gimp.org>
+
+	* tools/pdbgen/pdb/text_tool.pdb: deprecate the XLFD-based API
+	gimp_text() and gimp_text_get_extents().
+
+	* app/pdb/text_tool_cmds.c
+	* libgimp/gimptexttool_pdb.[ch]: regenerated.
+
 2004-06-15  Manish Singh  <yosh@gimp.org>
 
 	* tools/pdbgen/pdbgen.pl
