2004-06-16  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/gimpcontroller.[ch]: added a "name" property.
	Dispatch events only if the controller is enabled.

	* app/widgets/gimpcontrollerwheel.c: added controller events for
	all possible modifier combinations.

	* etc/Makefile.am
	* etc/controllerrc: default controllerrc which maps all unused
	wheel+modifier combinations to more-or-less usefull stuff.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13640 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2004-06-16  Michael Natterer  <mitch@gimp.org>
 
+	* libgimpwidgets/gimpcontroller.[ch]: added a "name" property.
+	Dispatch events only if the controller is enabled.
+
+	* app/widgets/gimpcontrollerwheel.c: added controller events for
+	all possible modifier combinations.
+
+	* etc/Makefile.am
+	* etc/controllerrc: default controllerrc which maps all unused
+	wheel+modifier combinations to more-or-less usefull stuff.
+
+2004-06-16  Michael Natterer  <mitch@gimp.org>
+
 	Started to fix bug #106920 in a more genreral way:
 
 	* libgimpwidgets/Makefile.am
