2004-06-07  Pablo G. del Campo <pablodc@bigfoot.com>
        * es.po: Updated Spanish translation by
        Francisco Vila <francisco.vila@hispalinux.es>.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13643 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/es.po
+++ b/po/es.po
@@ -2785,9 +2785,9 @@ msgstr "Traducido por"
 #: app/gui/about-dialog.c:54
 msgid "translator-credits"
 msgstr ""
-"Pablo G. del Campo\n"
-"Francisco Javier F. Serrador\n"
-"Francisco Vila"
+"Pablo G. del Campo <pablodc@bigfoot.com>\n"
+"Francisco Javier F. Serrador <serrador@arrakis.es>\n"
+"Francisco Vila <francisco.vila@hispalinux.es>"
 
 #: app/gui/about-dialog.c:59
 msgid "Contributions by"
