--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-06-16  Michael Natterer  <mitch@gimp.org>
 
+	* etc/controllerrc: use the 10% actions for opacity.
+
+2004-06-16  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpcontrollers.c: ref the actions when putting
 	them in the mapping table.
 
