2004-06-16  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpcontrollers.c: load the controller's
	properties from the controllerrc file.

	* etc/controllerrc: set the wheel's properties.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13645 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-06-16  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpcontrollers.c: load the controller's
+	properties from the controllerrc file.
+
+	* etc/controllerrc: set the wheel's properties.
+
+2004-06-16  Michael Natterer  <mitch@gimp.org>
+
 	* etc/controllerrc: use the 10% actions for opacity.
 
 2004-06-16  Michael Natterer  <mitch@gimp.org>
