forgot this one...
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13647 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-06-16  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpcontrollers.c: bug fix.
+
+	* configure.in: check for linux/input.h.
+
+	* modules/Makefile.am
+	* modules/controller_linux_input.c: added a prototype controller
+	module using the linux input event interface.
+
+	* etc/controllerrc: added example config for linux input device.
+
 2004-06-16  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpcontrollers.c: load the controller's
