2004-06-16  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpcontrollers.c: better debugging output.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13648 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-16  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpcontrollers.c: better debugging output.
+
 2004-06-16  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpcontrollers.c: bug fix.
