2004-06-16  Sven Neumann  <sven@gimp.org>
	* modules/controller_linux_input.c
	* etc/controllerrc: basic wheel event support.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13649 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-16  Sven Neumann  <sven@gimp.org>
+
+	* modules/controller_linux_input.c
+	* etc/controllerrc: preliminary wheel event support.
+
 2004-06-16  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpcontrollers.c: better debugging output.
