2004-06-16  Jakub Steiner <jimmac@ximian.com>
* etc/controllerrc: fix typo


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13650 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-16  Jakub Steiner <jimmac@ximian.com>
+
+	* etc/controllerrc: fix typo
+
 2004-06-16  Sven Neumann  <sven@gimp.org>
 
 	* modules/controller_linux_input.c
