2004-06-16  Michael Natterer  <mitch@gimp.org>
	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpcontrollerinfo.[ch]: made an object out of
	the GimpControllerInfo struct.

	* app/widgets/gimpcontrollers.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13651 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-06-16  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/Makefile.am
+	* app/widgets/widgets-types.h
+	* app/widgets/gimpcontrollerinfo.[ch]: made an object out of
+	the GimpControllerInfo struct.
+
+	* app/widgets/gimpcontrollers.c: changed accordingly.
+
 2004-06-16  Jakub Steiner <jimmac@ximian.com>
 
 	* etc/controllerrc: fix typo
