--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-16  Sven Neumann  <sven@gimp.org>
+
+	* menus/image-menu.xml.in: added missing menu entries (bug #144449).
+
 2004-06-16  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpcontroller.[ch]: added
