2004-06-16  Simon Budig  <simon@gimp.org>
	* modules/controller_linux_input.c: enable dial-events for
	e.g. the powermate. Fixed typo.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13654 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-16  Simon Budig  <simon@gimp.org>
+
+	* modules/controller_linux_input.c: enable dial-events for
+	e.g. the powermate. Fixed typo.
+
 2004-06-16  Sven Neumann  <sven@gimp.org>
 
 	* menus/image-menu.xml.in: added missing menu entries (bug #144449).
