2004-06-15  Andras Timar  <timar@gnome.hu>
	* hu.po: Updated Hungarian translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13655 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-15  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-06-07  Sven Neumann  <sven@gimp.org>
 
 	* de.po: some updates to the german translation.
