--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-15  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-06-07  Pablo G. del Campo <pablodc@bigfoot.com>
                                                                                                                    
         * es.po: Updated Spanish translation by
