--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-16  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: updated italian translation.
+
 2004-06-15  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
