committing ChangeLog entry for previous commit
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13658 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-16  Bill Skaggs <weskaggs@primate.ucdavis.edu>
+
+	* plug-ins/common/blur.c: removed randomize and repeat options;
+	made to run without popping a dialog.  (bug #142318)
+
 2004-06-16  Simon Budig  <simon@gimp.org>
 
 	* modules/controller_linux_input.c: enable dial-events for
