2004-06-16  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/plugin-defs.pl: changed dependencies for blur.

	* plug-ins/common/Makefile.am: regenerated.

	* plug-ins/common/blur.c: no need to include libgimpui.h any longer.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13659 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-16  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/plugin-defs.pl: changed dependencies for blur.
+
+	* plug-ins/common/Makefile.am: regenerated.
+
+	* plug-ins/common/blur.c: no need to include libgimpui.h any longer.
+
 2004-06-16  Bill Skaggs <weskaggs@primate.ucdavis.edu>
 
 	* plug-ins/common/blur.c: removed randomize and repeat options;
