2004-06-16  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpcontrollerwheel.c
	(gimp_controller_wheel_get_event_name): don't use gettext() here.

	* modules/controller_linux_input.c: added more button events, set
	the device name, some cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13661 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-06-16  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpcontrollerwheel.c
+	(gimp_controller_wheel_get_event_name): don't use gettext() here.
+
+	* modules/controller_linux_input.c: added more button events, set
+	the device name, some cleanup.
+
+2004-06-16  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/plugin-defs.pl: changed dependencies for blur.
 
 	* plug-ins/common/Makefile.am: regenerated.
