--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-16  Simon Budig  <simon@gimp.org>
+
+	* modules/controller_linux_input.c: break out of the
+	loop after we handled the first matching rel_event.
+
 2004-06-16  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpcontroller.[ch]: added #define
