2004-06-16  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/gimpcontroller.c (gimp_controller_get_event_name)
	(gimp_controller_get_event_blurb): always return a non-NULL
	string (return "<invalid event id>" as fallback).

	* modules/controller_linux_input.c: reenabled button event
	dispatching.

	* app/widgets/gimpcontrollerinfo.c: fixed debugging output.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13664 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-06-16  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/gimpcontroller.c (gimp_controller_get_event_name)
+	(gimp_controller_get_event_blurb): always return a non-NULL
+	string (return "<invalid event id>" as fallback).
+
+	* modules/controller_linux_input.c: reenabled button event
+	dispatching.
+
+	* app/widgets/gimpcontrollerinfo.c: fixed debugging output.
+
 2004-06-16  Simon Budig  <simon@gimp.org>
 
 	* modules/controller_linux_input.c: break out of the
