--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-16  Simon Budig  <simon@gimp.org>
+
+	* modules/controller_linux_input.c: removed BTN_MISC, 
+	since it is the same as BTN_0 in the input.h header file.
+
 2004-06-16  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpcontroller.c (gimp_controller_get_event_name)
