--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-16  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/context-actions.c
+	* app/actions/context-commands.[ch]: added actions & callback
+	to select the first/last/prev/next tool.
+
 2004-06-16  Simon Budig  <simon@gimp.org>
 
 	* modules/controller_linux_input.c: removed BTN_MISC, 
