2004-06-16  Manish Singh  <yosh@gimp.org>
        * modules/controller_linux_input.c: put BTN_{WHEEL,GEAR_DOWN,GEAR_UP}
        usage in #ifdefs, since pre-2.6 kernels do not have them.

        * modules/controller_linux_input.c (linux_input_read_event): n_bytes
        should be a gsize.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13667 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-16  Manish Singh  <yosh@gimp.org>
+
+	* modules/controller_linux_input.c: put BTN_{WHEEL,GEAR_DOWN,GEAR_UP}
+	usage in #ifdefs, since pre-2.6 kernels do not have them.
+
+	* modules/controller_linux_input.c (linux_input_read_event): n_bytes
+	should be a gsize.
+
 2004-06-16  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/context-actions.c
