2004-06-17  Michael Natterer  <mitch@gimp.org>
	* app/display/gimpdisplayshell.c: GtkUIManager makes the menu bar
	visible by default, hide it if options->show_menubar is FALSE.
	Fixes bug #143243.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13673 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-17  Michael Natterer  <mitch@gimp.org>
+
+	* app/display/gimpdisplayshell.c: GtkUIManager makes the menu bar
+	visible by default, hide it if options->show_menubar is FALSE.
+	Fixes bug #143243.
+
 2004-06-17  Sven Neumann  <sven@gimp.org>
 
 	* configure.in: bumped version to 2.1.1. Allow to disable the
