--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-17  Pedro Gimeno  <pggimeno@wanadoo.es>
+
+	* tools/pdbgen/pdb/paths.pdb: Fix typos and improve documentation.
+	Addresses bug #144267.
+
+	* app/pdb/paths_cmds.c
+	* libgimp/gimppaths_pdb.c: regenerated.
+
 2004-06-17  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpcontroller.[ch]: removed "enabled"
