2004-06-17  Michael Natterer  <mitch@gimp.org>
	* app/core/gimp-utils.[ch]: added gimp_boolean_handled_accum().

	* app/core/gimp.c
	* app/widgets/gimpcontrollerinfo.c: use it.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13679 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-06-17  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimp-utils.[ch]: added gimp_boolean_handled_accum().
+
+	* app/core/gimp.c
+	* app/widgets/gimpcontrollerinfo.c: use it.
+
+2004-06-17  Michael Natterer  <mitch@gimp.org>
+
 	* app/core/gimpcontainer.c (gimp_container_deserialize): add newly
 	created children to the container *after* deserializing them so
 	GimpContainer::add() callbacks get the already deserialized
